# AZ_data_hackthon

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
000_客户提供的资料/: HACKATHON_Data_Dictionary_v2.md  HACKATHON_Data_Model_v2.md  HACKATHON_Data_Overview.md
000_客户提供的资料/01_各个表格字段解读 - 开发和财务视角/: 1总体解读.docx  2 FACT_PNL_BASE_BRAND字段说明.docx  3 FACT_COM_BASE_BRAND 字段解读.docx  4 维度表字段 1_2.docx  5 维度表字段2_2.docx
000_客户提供的资料/02_ SAMPLE DATA/: DIM_ACCOUNT_HIERARCHY_sample.csv  DIM_ACCOUNT_sample.csv  DIM_MANAGEMENT_UNIT_HIERARCHY_sample.csv  DIM_MANAGEMENT_UNIT_sample.csv  DIM_MARKET_sample.csv  DIM_PRODUCT_HIERARCHY_sample.csv  DIM_PRODUCT_sample.csv  DIM_SCENARIO_sample.csv  DIM_TIME_sample.csv  FACT_COM_BASE_BRAND_sample.csv  FACT_PNL_BASE_BRAND_sample.csv
config/: metrics_template.yaml  settings.yaml
config/prompts/: system_prompt.md
docs/: technical-document.md
scripts/: demo_detection.py  init_db.py  init_mysql_db.py  insert_sample_data.py  start_all.sh  test_detect_api.py  test_detection.py  test_detection_mock.py
src/: __init__.py
src/agent/: __init__.py  agent.py
src/core/: __init__.py  config.py  database.py  llm_provider.py
src/detect/: README.md  __init__.py  api.py  detector.py  models.py
src/messaging/: __init__.py  queue.py
src/monitor/: __init__.py  alert_engine.py  executor.py  metrics_loader.py  models.py  scheduler.py
src/web/: __init__.py  app.py
tests/: __init__.py  conftest.py
tests/test_agent/: test_deepagent.py
tests/test_core/: __init__.py  test_config.py  test_database.py  test_integration.py  (+1 more)
(+51 files in other folders)
